--- a/ciderMapCSS.css
+++ b/ciderMapCSS.css
@@ -19,5 +19,5 @@ body { margin:0; padding:0; }
   cursor: pointer;
 }
 
-h2 { text-align: center; }
+h2 { text-align: center; font-size: x-large; }
 h3 { text-align: center; }
