--- a/ciderMapCSS.css
+++ b/ciderMapCSS.css
@@ -1,6 +1,6 @@
 body { margin:0; padding:0; }
 #map { position:absolute; top:0; bottom:0; width:100%; }
 
-.mapboxgl-popup-content {
-  width: 400px
+th, td {
+  padding: 5px;
 }
