--- a/ciderMapCSS.css
+++ b/ciderMapCSS.css
@@ -2,5 +2,5 @@ body { margin:0; padding:0; }
 #map { position:absolute; top:0; bottom:0; width:100%; }
 
 th, td {
-  padding: 0 5px;
+  padding: 0 5px 10px 5px;
 }
